package(default_visibility = ["//metisfl/controller:__subpackages__"])

cc_library(
    name = "scaling",
    srcs = [],
    hdrs = [
        "model_scaling.h",
    ],
    deps = [
        ":batches_scaler",
        ":participants_scaler",
        ":train_dataset_size_scaler",
    ],
)

cc_library(
    name = "batches_scaler",
    srcs = [
        "batches_scaler.cc",
    ],
    hdrs = [
        "batches_scaler.h",
        "scaling_function.h",
    ],
    deps = [
        "//metisfl/proto:metis_cc_proto",
        "@absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "train_dataset_size_scaler",
    srcs = [
        "train_dataset_size_scaler.cc",
    ],
    hdrs = [
        "train_dataset_size_scaler.h",
        "scaling_function.h",
    ],
    deps = [
        "//metisfl/proto:metis_cc_proto",
        "@absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "participants_scaler",
    srcs = [
        "participants_scaler.cc",
    ],
    hdrs = [
        "participants_scaler.h",
        "scaling_function.h",
    ],
    deps = [
        "//metisfl/proto:metis_cc_proto",
        "@absl//absl/container:flat_hash_map",
    ],
)