package(default_visibility = ["//metisfl/controller:__subpackages__"])

cc_library(
    name = "storing",
    hdrs = [
        "store.h",
    ],
    deps = [
        ":model_store",
        "//metisfl/controller/store/hash_map:hash_map_model_store",
        "//metisfl/controller/store/redis:redis_model_store",
    ]
)

cc_library(
    name = "model_store",
    hdrs = ["model_store.h"],
    srcs = ["model_store.cc"],
    deps = [
        "//metisfl/proto:cc_grpc_lib",
        "@com_github_google_glog//:glog",
    ]
)

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_binary
cc_test(
    name = "model_store_test",
    srcs = ["model_store_test.cc"],
    deps = [
        ":model_store",
        ":storing",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
        "//metisfl/proto:cc_grpc_lib",
        "//metisfl/controller/common:proto_tensor_serde",
    ],
)