load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

cmake(
    name = "palisade_cmake",
    cache_entries = {
      "BUILD_BENCHMARKS": "OFF",
      "BUILD_UNITTESTS": "OFF",
      "CMAKE_BUILD_TYPE": "Release",
	},
    defines = ["MATHBACKEND=2"],
    env = {
        "CMAKE_BUILD_PARALLEL_LEVEL": "16",
    },
    includes = [
        "palisade",
        "palisade/binfhe",
        "palisade/core",
        "palisade/pke",
    ],
    lib_source = "@palisade_git//:palisade_srcs",
    out_include_dir = "include",
    out_shared_libs = select({
      "//:linux_x86_64": [
        "libPALISADEcore.so.1",
        "libPALISADEbinfhe.so.1",
        "libPALISADEpke.so.1",
      ],
      "//conditions:default": [
        "libPALISADEcore.1.11.7.dylib",
        "libPALISADEbinfhe.1.11.7.dylib",
        "libPALISADEpke.1.11.7.dylib",
      ],
    }),
    linkopts = select({
      "//:linux_x86_64": ["-lgomp"],
      "//conditions:default": [""],
    }),
    copts = [
        "-Wall",
        "-Werror",
        "-O3",
        "-DPALISADE_VERSION=1.11.7",
        "-Wno-unused-private-field",
        "-Wno-shift-op-parentheses",
        "-DMATHBACKEND=2",
        "-Xpreprocessor",
        "-fopenmp",
        "-Wno-unused-command-line-argument",
    ]
)

cc_library(
    name = "palisade_fhe_helper",
    hdrs = ["fhe_helper.h"],
    srcs = ["fhe_helper.cc"],
    deps = [
      "//metisfl/encryption/core:palisade_cmake",
      "@absl//absl/strings",
      "@com_github_google_glog//:glog",
    ],
    linkopts = select({
      "//:linux_x86_64": ["-lgomp"],
      "//conditions:default": [],
    }),
    copts = [
        "-Wall",
        "-Werror",
        "-O3",
        "-DPALISADE_VERSION=1.11.7",
        "-Wno-unused-private-field",
        "-Wno-shift-op-parentheses",
        "-DMATHBACKEND=2",
        "-Xpreprocessor",
        "-fopenmp",
        "-Wno-unused-command-line-argument",
    ]
)

cc_binary(
  name = "palisade_fhe_helper_demo",
  srcs = ["fhe_helper_demo.cc"],
  deps = [
    ":palisade_fhe_helper",
  ],
  data = [
    "//resources:fhe_cryptoparams"
  ]
)
