load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

cmake(
    name = "palisade_cmake",
    cache_entries = {
      "BUILD_BENCHMARKS": "OFF",
      "BUILD_UNITTESTS": "OFF",
      "CMAKE_BUILD_TYPE": "Release",
      "BUILD_STATIC": "ON"
	  },
    alwayslink=True,
    defines = ["MATHBACKEND=2"],
    env = {
        "CMAKE_BUILD_PARALLEL_LEVEL": "16",
    },
    includes = [
        "palisade",
        "palisade/binfhe",
        "palisade/core",
        "palisade/pke",
    ],
    lib_source = "@palisade_git//:palisade_srcs",
    out_include_dir = "include",
    out_static_libs = [
        "libPALISADEcore_static.a",
        "libPALISADEbinfhe_static.a",
        "libPALISADEpke_static.a",
    ],
    linkopts = select({
      "//:linux_x86_64": ["-lgomp"],
      "//conditions:default": [""],
    }),
    copts = [
        "-Wall",
        "-Werror",
        "-O3",
        "-DPALISADE_VERSION=1.11.7",
        "-Wno-unused-private-field",
        "-Wno-shift-op-parentheses",
        "-DMATHBACKEND=2",
        "-Xpreprocessor",
        "-fopenmp",
        "-Wno-unused-command-line-argument",
    ]
)

cc_library(
    name = "palisade_wrapper",
    hdrs = ["he_scheme.h", "ckks_scheme.h"],
    srcs = ["ckks_scheme.cc"],
    deps = [
      "//metisfl/encryption/palisade:palisade_cmake",
      "//metisfl/encryption:encryption_scheme",
      "@absl//absl/strings",
      "@com_github_google_glog//:glog",
    ],
    linkopts = select({
      "//:linux_x86_64": ["-lgomp"],
      "//conditions:default": [],
    }),
    copts = [
        "-Wall",
        "-Werror",
        "-O3",
        "-DPALISADE_VERSION=1.11.7",
        "-Wno-unused-private-field",
        "-Wno-shift-op-parentheses",
        "-DMATHBACKEND=2",
        "-Xpreprocessor",
        "-fopenmp",
        "-Wno-unused-command-line-argument",
    ]
)

cc_binary(
  name = "ckks_demo",
  data = [
    "//metisfl/resources:fheparams",
  ],
  srcs = ["ckks_demo.cc"],
  deps = [
    ":palisade_wrapper",
  ],
  linkstatic=True
)
