package(default_visibility = ["//projectmetis/controller:__subpackages__"])

cc_library(
    name = "model_aggregation",
    srcs = ["federated_average.cc", "private_weighted_average.cc"],
    hdrs = [
        "aggregation_function.h",
        "model_aggregation.h",
        "federated_average.h",
        "private_weighted_average.h"
    ],
    deps = [
        "//encryption/palisade/fhe:palisade_fhe_helper",
        "//projectmetis/core:proto_tensor_serde",
        "//projectmetis/proto:metis_cc_proto",
        "//projectmetis/proto:model_cc_proto",
    ],
    data = [
      "//resources:fhe_cryptoparams"
    ]
)

cc_library(
    name = "federated_average",
    srcs = [
        "federated_average.cc"
    ],
    hdrs = [
        "aggregation_function.h",
        "federated_average.h"
    ],
    deps = [
        "//projectmetis/proto:model_cc_proto",
        "//projectmetis/core:proto_tensor_serde",
    ],
)

cc_test(
    name = "federated_average_test",
    srcs = [
        "federated_average_test.cc"
    ],
    deps = [
        ":federated_average",
        "//projectmetis/core:macros",
        "//projectmetis/core:proto_matchers",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "private_weighted_average",
    srcs = [
        "private_weighted_average.cc"
    ],
    hdrs = [
        "aggregation_function.h",
        "private_weighted_average.h"
    ],
    deps = [
        "//projectmetis/proto:metis_cc_proto",
        "//projectmetis/proto:model_cc_proto",
        "//encryption/palisade/fhe:palisade_fhe_helper",
    ],
)
