package(default_visibility = ["//projectmetis/controller:__subpackages__"])

cc_library(
    name = "model_aggregation",
    srcs = [],
    hdrs = [
        "model_aggregation.h",
    ],
    deps = [
        ":federated_average",
        ":federated_recency",
        ":federated_stride",
        ":private_weighted_average",
        "//projectmetis/core:proto_tensor_serde",
        "//projectmetis/proto:metis_cc_proto",
        "//projectmetis/proto:model_cc_proto",
    ],
    data = [
      "//resources:fhe_cryptoparams",
    ]
)

cc_library(
    name = "federated_average",
    srcs = [
        "federated_average.cc",
    ],
    hdrs = [
        "aggregation_function.h",
        "federated_average.h",
    ],
    deps = [
        "//projectmetis/proto:model_cc_proto",
        "//projectmetis/core:proto_tensor_serde",
    ],
    linkopts = select({
      "//:linux_x86_64": ["-lgomp"],
      "//conditions:default": [],
    }),
    copts = [
        "-O3",
        "-fopenmp",
    ]
)

cc_test(
    name = "federated_average_test",
    srcs = [
        "federated_average_test.cc",
    ],
    deps = [
        ":federated_average",
        "//projectmetis/core:macros",
        "//projectmetis/core:proto_matchers",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "federated_rolling_average_base",
    srcs = [
        "federated_rolling_average_base.cc",
    ],
    hdrs = [
        "federated_rolling_average_base.h",
    ],
    deps = [
         "//projectmetis/proto:model_cc_proto",
         "//projectmetis/core:proto_tensor_serde",
    ],
)

cc_library(
    name = "federated_recency",
    srcs = [
        "federated_recency.cc",
    ],
    hdrs = [
        "aggregation_function.h",
        "federated_recency.h",
    ],
    deps = [
        ":federated_rolling_average_base",
        "//projectmetis/proto:metis_cc_proto",
        "//projectmetis/proto:model_cc_proto",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "federated_recency_test",
    srcs = [
        "federated_recency_test.cc",
    ],
    deps = [
        ":federated_recency",
        "//projectmetis/core:macros",
        "//projectmetis/core:proto_matchers",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "federated_stride",
    srcs = [
        "federated_stride.cc",
    ],
    hdrs = [
        "aggregation_function.h",
        "federated_stride.h",
    ],
    deps = [
        ":federated_rolling_average_base",
         "//projectmetis/proto:metis_cc_proto",
         "//projectmetis/proto:model_cc_proto",
    ],
)

cc_test(
    name = "federated_stride_test",
    srcs = [
        "federated_stride_test.cc",
    ],
    deps = [
        ":federated_stride",
        "//projectmetis/core:macros",
        "//projectmetis/core:proto_matchers",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)

cc_library(
    name = "private_weighted_average",
    srcs = [
        "private_weighted_average.cc",
    ],
    hdrs = [
        "aggregation_function.h",
        "private_weighted_average.h",
    ],
    deps = [
        "//projectmetis/proto:metis_cc_proto",
        "//projectmetis/proto:model_cc_proto",
        "//encryption/palisade/fhe:palisade_fhe_helper",
    ],
)
